Solved problem where elements got behind the navbar when scrolling to them throgh a HashLink

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
 
 @layer base {
     html {
+        scroll-padding-top: 100px;
         font-family: Montserrat;
         background-color: #fffff0;
     }
